Js fixes and spelling mistake corrections.

--- a/contact.html
+++ b/contact.html
@@ -102,7 +102,7 @@
                 <h1>Okay, okay, I have a confession to make...</h1>
                 <h2>QuickBite isn't real!</h2>
                 <p>
-                    As you may or may not be aware, QuickBite isn't real ("Wait, What?! This is the worst Birthday ever"). QuickBite is a concept for a restaurant, which was created as a web-development project, to practice building and showcase a static website using HTML, CSS and JavaScript.
+                    As you may or may not be aware, QuickBite isn't real ("Wait, What?! This is the worst Birthday ever!"). QuickBite is a concept for a restaurant, which was created as a web-development project, to practice building and showcase a static website using HTML, CSS and JavaScript.
                 </p>
                 <ul>
                     <li id="basics">
@@ -111,7 +111,7 @@
                         <p>
                             There is alot of HTML in this project. The indentation in the code is neat and tidy, the HTML itself is properly applied and the code is readable. A broad variety of html elements and techniques were used in this project, the menu page uses multiple heading types and nested unordered lists to create a complex yet easily readable menu. Grids and tables were also used through-out the various pages.
                         </p>
-                        <p>The CSS in this project is split across multiple files making it easier to maintain and make changes to.</p>
+                        <p>The CSS in this project is split across multiple files making it easier to maintain and make changes too.</p>
                         <p>The images and svgs are subdivided to make them more managable.</p>
                         <p>The JavaScript is simple yet effective, it prevents the page content from displaying until loaded, it is used to create the parallax effect on the About-us page, to display the navigation menu on smaller screens and to copy text to the clipboard at the end of this page.</p>
                     </li>
@@ -120,7 +120,7 @@
                         <ul>
                             <li>
                                 <p>
-                                    I wanted to create an eye catching logo and have abit of fun making this page ("I'm still disappointed the <span class="logo-text alt">QuickBite</span> special isn't real"). The original svg used in the logo I found online and purchased then i modified it in Illustrator to create the logo. I designed multiple variations of the logo and learned alot in the process.
+                                    I wanted to create an eye catching logo and have abit of fun making this page ("I'm still disappointed the <span class="logo-text alt">QuickBite</span> special isn't real?!"). The original svg used in the logo I found online and purchased, then i modified it in Illustrator to create the logo. I designed multiple variations of the logo and learned alot in the process.
                                 </p>
                                 <div id="logo-grid">
                                     <div>
@@ -173,7 +173,7 @@
                     <li id="responsivity">
                         <h3>Responsivity</h3>
                         <p>The final goal of this project was to create a web-site that renders perfectly and looks the same on any screen-size with as little additional code as possible.
-                            To achieve this I explored using different measurement types in css to change the way elements scaled, combined with svgs for the logos and a couple of media queries to tie up the loose ends. I'm really happy with the end result, I've learned alot and now have the challenge of refactoring my other projects to bring them up to this level. 
+                            To achieve this I explored using different measurement types in css to change the way elements scaled, combined with svgs for the logos and a couple of media queries to tie up the loose ends. I'm really happy with the end result, I've learned alot and now want to refactor my other projects to bring them up to this level. 
                         </p>
                     </li>
                 </ul>   
