--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h2>Food so nutritious mother-nature wants it back.</h2>
                     <h3><span class="logo-text">QuickBite</span> is food!</h3>
                     <p>
-                        At <span class="logo-text">QuickBite</span> we have decided to reimagine what fast food is.<br>
+                        At <span class="logo-text">QuickBite</span> we have decided to re-imagine what fast food is.<br>
                         We pride ourselves on our fresh and nutritious ingredients.<br>
                         Locally sourced as often as not.<br>
                         Are goal is to make simple dishes that taste amazing and satisfy your hunger.
@@ -135,7 +135,7 @@
                         At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
                         We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
                         If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here.<br>
-                        None of our sides, mains, or drinks contain sugar, or artificail sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
+                        None of our sides, mains, or drinks contain sugar, or artificial sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
                     </p>
                 </li>
                 <li>
@@ -144,9 +144,9 @@
                     <p>
                         At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
                         We never want to leave anybody out, everybody gets fed, everybody leaves with a smile.<br>
-                        Are menu was specially designed to have something for everyone.<br>
-                        So that means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
-                        And that also means if you are a celiac or lactose intolarent, there's something for you too!
+                        Our menu has been specially designed to ensure that we can serve something for everyone.<br>
+                        That means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
+                        And that also means if you are a celiac or lactose intolerant, there's something for you too!
                     </p>
                 </li>
             </ul>
