--- a/menu.html
+++ b/menu.html
@@ -133,7 +133,7 @@
                         </li>
                         <li class="individual-list-item">
                             <h4>Garlic Bread</h4>
-                            <p class="individual-description">Home-made gluten free garlic bread</p>
+                            <p class="individual-description">Home-made gluten free garlic bread.</p>
                             <p class="ingredients">Gluten free flour, tapioca flour, yeast, salt, egg, honey, apple-cider vinegar, butter, garlic, olive-oil, parsley.</p>
                         </li>
                     </ul>
@@ -169,7 +169,7 @@
                         </li>
                         <li class="dishtype-list-item">
                             <h3>Toasted Sandwiches</h3>
-                            <p class="dishtype-description">Fresh Toasted Sandwiches available with any filling from the salad menu and any sauce of your choice.</p>
+                            <p class="dishtype-description">Fresh toasted sandwiches available with any filling from the salad menu and any sauce of your choice.</p>
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>Club</h4>
@@ -178,7 +178,7 @@
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>BLT</h4>
-                                    <p class="individual-description">Bacon, Lettuce, Tomatoe, simple.</p>
+                                    <p class="individual-description">Bacon, lettuce, tomatoe, simple.</p>
                                     <p class="ingredients">Bread, bacon, lettuce, tomatoe and mayonnaise.</p>
                                 </li>
                                 <li class="individual-list-item">
@@ -194,7 +194,7 @@
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>Cheese</h4>
-                                    <p class="individual-description">Classic cheese pizza</p>
+                                    <p class="individual-description">Classic cheese pizza.</p>
                                     <p class="ingredients">Gluten free pizza base, cheese, tomatoe sauce.</p>
                                 </li>
                                 <li class="individual-list-item">
@@ -221,7 +221,7 @@
                     <ul class="category-list">
                         <li class="dishtype-list-item">
                             <h3>The <span class="logo-text alt">QuickBite</span> Special</h3>
-                            <p class="dishtype-description">A sandwich of the finest fillings constructed between 2 square pieces of thin crust pizza, turned inwards. Can you say, perfection?</p>
+                            <p class="dishtype-description">A sandwich of the finest fillings constructed between 2 square pieces of thin crust pizza, turned inwards.</p>
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>The Brecfast Bonanza</h4>
@@ -252,7 +252,7 @@
                     <ul class="category-list">
                         <li class="individual-list-item">
                             <h4>Milk</h4>
-                            <p class="individual-description">Irelands finest full fat milk.</p>
+                            <p class="individual-description">Full fat milk.</p>
                         </li>
                         <li class="individual-list-item">
                             <h4>Bottled Water</h4>
@@ -300,7 +300,7 @@
                         <h2>Sauces</h2>
                         <img src="images-and-svgs\svgs\menu\sauce-bottle-svgrepo-com.svg">
                     </div>
-                    <p class="category-description">A selection of our finest sauces and dressings, these items have been carefully selected ensuring their ingredients meet our standard of what believe to be healthy and nurishing. <span class="price">Price: €1</span>.</p></p>
+                    <p class="category-description">A selection of our finest sauces and dressings, these items have been carefully selected ensuring their ingredients meet our standard of what we believe to be healthy and nurishing. <span class="price">Price: €1</span>.</p></p>
                     <ul class="category-list">
                         <li class="dishtype-list-item">
                             <h3>Dips</h3>
@@ -312,7 +312,7 @@
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Curry</h4>
-                                    <p class="individual-description">Chip-shop style curry sauce sugar and sweetner free.</p>
+                                    <p class="individual-description">Chip-shop style curry sauce, sugar and sweetner free.</p>
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Tomatoe</h4>
@@ -322,7 +322,7 @@
                         </li>
                         <li class="dishtype-list-item">
                             <h3>Dressings</h3>
-                            <p class="dishtype-description">Dressing for Salads, Sandwiches and everything in between.</p>
+                            <p class="dishtype-description">Dressing for salads, sandwiches and everything in between.</p>
                             <ul>
                                 <li class="individual-list-item">
                                     <h4>Olive-oil and balsamic-vinegar blend</h4>
@@ -330,7 +330,7 @@
                                 </li>
                                 <li class="individual-list-item">
                                     <h4>Ranch</h4>
-                                    <p class="individual-description">A healthy sugar and sweetner free, ranch style dressing, see label for ingredients.</p>
+                                    <p class="individual-description">A healthy, sugar and sweetner free, ranch style dressing, see label for ingredients.</p>
                                 </li>
                             </ul>
                         </li>
