svg arrows folder

--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -76,7 +76,7 @@
         </nav>
         <div id="nav-button-menu">
             <div id="nav-menu-exit">
-                <img src="images-and-svgs\svgs\close-bold.svg">
+                <img src="images-and-svgs\svgs\arrows\close-bold.svg">
             </div>
             <ul>
                 <li><p><a href="index.html">Home</a></p></li>
@@ -85,7 +85,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -180,7 +180,7 @@
                 <h1>To get in touch, click below!</h1>
                 <span class="side-button-container">
                     <a href="contact.html">
-                        <img class="button side" src="images-and-svgs\svgs\side-arrow.svg">
+                        <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                     </a>
                 </span>
             </div>
