--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -62,7 +62,7 @@
         </nav>
         <div id="nav-button-menu">
             <div id="nav-menu-exit">
-                <img src="images-and-svgs\svgs\close-bold.svg">
+                <img src="images-and-svgs\svgs\arrows\close-bold.svg">
             </div>
             <ul>
                 <li><p><a href="index.html">Home</a></p></li>
@@ -71,7 +71,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
