--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
             <span class="down-button-container">
                 <a href="#logo-small">
-                    <img class="button responsive" src="images-and-svgs\svgs\down-arrow-5-svgrepo-com.svg">
+                    <img class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow-5-svgrepo-com.svg">
                 </a>
             </span>
         </div>
@@ -40,7 +40,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -69,7 +69,7 @@
         </nav>
         <div id="nav-button-menu">
             <div id="nav-menu-exit">
-                <img src="images-and-svgs\svgs\close-bold.svg">
+                <img src="images-and-svgs\svgs\arrows\close-bold.svg">
             </div>
             <ul>
                 <li><p class="active"><a href="#welcome-section">Home</a></p></li>
@@ -78,7 +78,7 @@
                         <p>
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -155,7 +155,7 @@
             <h1>Like what you see? Check out our menu!</h1>
             <span class="side-button-container">
                 <a href="menu.html">
-                    <img class="button side" src="images-and-svgs\svgs\side-arrow.svg">
+                    <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                 </a>
             </span>
         </div>
