--- a/menu.html
+++ b/menu.html
@@ -32,7 +32,7 @@
                         <p class="active">
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -61,7 +61,7 @@
         </nav>
         <div id="nav-button-menu">
             <div id="nav-menu-exit">
-                <img src="images-and-svgs\svgs\close-bold.svg">
+                <img src="images-and-svgs\svgs\arrows\close-bold.svg">
             </div>
             <ul>
                 <li><p><a href="index.html">Home</a></p></li>
@@ -70,7 +70,7 @@
                         <p class="active">
                             <a href="menu.html">Menu</a>    
                         </p>
-                        <img src="images-and-svgs\svgs\side-arrow-white.svg">
+                        <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
                     <ul class="sub-menu">
                         <li>
@@ -342,7 +342,7 @@
             <h1>Find out more about us!</h1>
             <span class="alt side-button-container">
                 <a href="about.html">
-                    <img class="button" src="images-and-svgs\svgs\side-arrow-red.svg">
+                    <img class="button" src="images-and-svgs\svgs\arrows\side-arrow-red.svg">
                 </a>
             </span>
         </div>
