alternate menu style

--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="alt" lang="en">
+<html class="background-image" lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -337,14 +337,14 @@
                     </ul>
                 </li>
             </ul>
-        </div>
-        <div class="continue-prompt">
-            <h1>Find out more about us!</h1>
-            <span class="alt side-button-container">
-                <a href="about.html">
-                    <img class="button" src="images-and-svgs\svgs\arrows\side-arrow-red.svg">
-                </a>
-            </span>
+            <div class="continue-prompt content" id="menu-continue-prompt">
+                <h1>Find out more about us!</h1>
+                <span class="alt side-button-container">
+                    <a href="about.html">
+                        <img class="button" src="images-and-svgs\svgs\arrows\side-arrow-red.svg">
+                    </a>
+                </span>
+            </div>
         </div>
     </main>
     <footer class="alt">
