menu alt changes

--- a/menu.html
+++ b/menu.html
@@ -339,9 +339,9 @@
             </ul>
             <div class="continue-prompt content" id="menu-continue-prompt">
                 <h1>Find out more about us!</h1>
-                <span class="alt side-button-container">
+                <span class="side-button-container">
                     <a href="about.html">
-                        <img class="button" src="images-and-svgs\svgs\arrows\side-arrow-red.svg">
+                        <img class="button side" src="images-and-svgs\svgs\arrows\side-arrow.svg">
                     </a>
                 </span>
             </div>
