welcome section redone

--- a/index.html
+++ b/index.html
@@ -17,15 +17,6 @@
 </head>
 <body>
     <main>
-        <div id="welcome-section" class="landing">
-            <img id="hero-image" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
-            <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
-            <span class="down-button-container">
-                <a href="#logo-small">
-                    <img class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow-5-svgrepo-com.svg">
-                </a>
-            </span>
-        </div>
         <nav>
             <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
              <div id="nav-button">
@@ -104,6 +95,16 @@
                 <li><p><a href="about.html">About-us</a></p></li>
                 <li><p><a href="contact.html">Contact</a></p></li>
             </ul>
+        </div>
+        <div id="welcome-section" class="landing">
+            <div id="welcome-text">
+                <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
+                <span class="down-button-container">
+                    <a href="#logo-small">
+                        <img class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow-5-svgrepo-com.svg">
+                    </a>
+                </span>
+            </div>
         </div>
         <div class="content non-menu" id="restaurant-info">
             <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
