alternate welcome screen styling changes

--- a/index.html
+++ b/index.html
@@ -98,12 +98,14 @@
         </div>
         <div id="welcome-section" class="landing">
             <div id="welcome-text">
-                <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
-                <span class="down-button-container">
-                    <a href="#logo-small">
-                        <img class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow-5-svgrepo-com.svg">
-                    </a>
-                </span>
+                <div id="text-and-button">
+                    <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
+                    <span class="down-button-container">
+                        <a href="#logo-small">
+                            <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+                        </a>
+                    </span>
+                </div>
             </div>
         </div>
         <div class="content non-menu" id="restaurant-info">
