--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div id="text-and-button">
                     <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
                     <span class="down-button-container">
-                        <a href="#logo-small">
+                        <a href="#restaurant-info">
                             <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
                         </a>
                     </span>
