--- a/about.html
+++ b/about.html
@@ -16,7 +16,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600;800&family=Grenze+Gotisch:wght@900&family=Merriweather+Sans:wght@400;600&family=Nunito&display=swap" rel="stylesheet">    
 
     <script src="scripts/app.js" defer></script>
-    <script src="scripts/parallax.js" defer></script>
     <script src="scripts/about.js" defer></script>
 
 </head>
@@ -38,7 +37,7 @@
                         </p>
                         <img src="images-and-svgs\svgs\arrows\side-arrow-white.svg">
                     </div>
-                    <ul id="about-sub-menu" class="sub-menu">
+                    <ul id="about-sub-menu" class="sub-menu about-pg">
                         <li>
                             <p><a href="menu.html#sides">Sides</a></p>
                         </li>
@@ -63,21 +62,18 @@
                 <li><p><a href="contact.html">Contact</a></p></li>
             </ul> 
         </nav>
-        <div class="landing">
-            <div id="parallax-lake">
+        <div id="lake-welcome" class="landing">
+            <div id="lake-text">
                 <div id="text">
                     <h1><span class="logo-text-main">QuickBite</span> @ The Point</h1>
-                    <p id="scroll-prompt">scroll</p>
+                    <span class="down-button-container">
+                        <a href="#location">
+                            <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
+                        </a>
                     </span>
-                </div> 
-                <div class="parallax-item" id="filter"></div>
-                <img class="parallax-item" id="background" src="images-and-svgs\images\lake-background-sky-alt.png">
-                <img class="parallax-item" id="middle" src="images-and-svgs/images/lake-middle.png">
-                <img class="parallax-item" id="foreground-2" src="images-and-svgs\images\lake-foreground-layer2-alt.png">
-                <img class="parallax-item" id="foreground" src="images-and-svgs\images\lake-foreground.png">
+                </div>
             </div>
         </div>
-        
         <div id="nav-button-menu">
             <div id="nav-menu-exit">
                 <img src="images-and-svgs\svgs\arrows\close-bold.svg">
