--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
             </ul>
         </div>
         <div id="welcome-section" class="landing">
+            <img id="hero-image" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <div id="welcome-text">
                 <div id="text-and-button">
                     <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
@@ -108,51 +109,53 @@
                 </div>
             </div>
         </div>
-        <div class="content non-menu" id="restaurant-info">
-            <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
-            <ul>
-                <li>
-                    <h2>Food so nutritious mother-nature wants it back.</h2>
-                    <h3><span class="logo-text">QuickBite</span> is food!</h3>
-                    <p>
-                        At <span class="logo-text">QuickBite</span> we have decided to re-imagine what fast food is.<br>
-                        We pride ourselves on our fresh and nutritious ingredients.<br>
-                        Locally sourced as often as not.<br>
-                        Are goal is to make simple dishes that taste amazing and satisfy your hunger.
-                    </p>
-                </li>
-                <li>
-                    <h2>Portions big enough to feed a wild animal.</h2>
-                    <h3>Portions that please!</h3>
-                    <p>
-                        <span class="logo-text">QuickBite</span> is here to feed you.<br>
-                        We don't skimp on portion size.<br>
-                        When you leave our restarant we want you to feel satisfied.<br>
-                        We believe calories are your friend as long as the ingredients are healthy and nutritious.
-                    </p>
-                </li>
-                <li>
-                    <h2>We use food in our food. That means no colors, preservatives or nasty additives.</h2>
-                    <h3>Your health is our wealth!</h3>
-                    <p>
-                        At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
-                        We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
-                        If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here.<br>
-                        None of our sides, mains, or drinks contain sugar, or artificial sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
-                    </p>
-                </li>
-                <li>
-                    <h2>Food for one. Food for all.</h2>
-                    <h3>We are <span class="logo-text">QuickBite</span>!</h3>
-                    <p>
-                        At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
-                        We never want to leave anybody out, everybody gets fed, everybody leaves with a smile.<br>
-                        Our menu has been specially designed to ensure that we can serve something for everyone.<br>
-                        That means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
-                        And that also means if you are a celiac or lactose intolerant, there's something for you too!
-                    </p>
-                </li>
-            </ul>
+        <div id="restaurant-info-container">
+            <div  class="content non-menu" id="restaurant-info">
+                <h1>Here at <span class="logo-text">QuickBite</span> we do things a little differently...</h2>
+                <ul>
+                    <li>
+                        <h2>Food so nutritious mother-nature wants it back.</h2>
+                        <h3><span class="logo-text">QuickBite</span> is food!</h3>
+                        <p>
+                            At <span class="logo-text">QuickBite</span> we have decided to re-imagine what fast food is.<br>
+                            We pride ourselves on our fresh and nutritious ingredients.<br>
+                            Locally sourced as often as not.<br>
+                            Are goal is to make simple dishes that taste amazing and satisfy your hunger.
+                        </p>
+                    </li>
+                    <li>
+                        <h2>Portions big enough to feed a wild animal.</h2>
+                        <h3>Portions that please!</h3>
+                        <p>
+                            <span class="logo-text">QuickBite</span> is here to feed you.<br>
+                            We don't skimp on portion size.<br>
+                            When you leave our restarant we want you to feel satisfied.<br>
+                            We believe calories are your friend as long as the ingredients are healthy and nutritious.
+                        </p>
+                    </li>
+                    <li>
+                        <h2>We use food in our food. That means no colors, preservatives or nasty additives.</h2>
+                        <h3>Your health is our wealth!</h3>
+                        <p>
+                            At <span class="logo-text">QuickBite</span> we wanted to make a restaurant that we wanted to eat in.<br>
+                            We decided that we would make a promise, never to use added colors, preservatives or any other nasty additives.<br>
+                            If you don't know what an ingredient means or if it's name has more numbers than letters, you wont find it here.<br>
+                            None of our sides, mains, or drinks contain sugar, or artificial sweetners. In fact the only place you will find sugar is in our desserts menu. Everybody deserves a treat once in a while :)
+                        </p>
+                    </li>
+                    <li>
+                        <h2>Food for one. Food for all.</h2>
+                        <h3>We are <span class="logo-text">QuickBite</span>!</h3>
+                        <p>
+                            At <span class="logo-text">QuickBite</span>  we understand that in todays world everybody has different dietary requirements.<br>
+                            We never want to leave anybody out, everybody gets fed, everybody leaves with a smile.<br>
+                            Our menu has been specially designed to ensure that we can serve something for everyone.<br>
+                            That means if you are vegan, vegetarian or pescatarian, there's something for you.<br>
+                            And that also means if you are a celiac or lactose intolerant, there's something for you too!
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </div>
         <div class="continue-prompt">
             <h1>Like what you see? Check out our menu!</h1>
