--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <img id="hero-image" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
             <div id="welcome-text">
                 <div id="text-and-button">
-                    <h1>Hungry?<br>Why not grab a <span class="logo-text-main">QuickBite</span>!</h1>
+                    <h1>Hungry?<br>Grab a <span class="logo-text-main">QuickBite</span>!</h1>
                     <span class="down-button-container">
                         <a href="#restaurant-info">
                             <img id="down-button" class="button responsive" src="images-and-svgs\svgs\arrows\down-arrow.svg">
