trying different methods

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 </head>
 <body>
     <main>
-        <nav>
-            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+        <nav>   
+            <div>
+                <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            </div>
              <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
