--- a/about.html
+++ b/about.html
@@ -22,7 +22,9 @@
 <body>
     <main>
         <nav id="about-pg-nav">
-            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            <div>
+                <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            </div>
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
