--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,9 @@
 <body>
     <main>
         <nav class="alt">
-            <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-small-red-white.svg">
+            <div>
+                <img id="logo-small" src="images-and-svgs\svgs\logos\QuickBite-logo-red-no-fill-whiteteeth.svg">
+            </div>
             <div id="nav-button">
                 <div class="nav-line"></div>
                 <div class="nav-line"></div>
